--- a/docker/workspace/Dockerfile
+++ b/docker/workspace/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:hydrogen-bullseye
 
-RUN apt update && apt install -y \
-  jq
+RUN apt-get update && apt-get install -y vim jq
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
   && unzip awscliv2.zip \
